branches/0.0.6/mandriva_pptp/unit1.rst

# hash value = 136920065
unit1.message0=#208#146#208#189#208#184#208#188#208#176#208#189#208#184#208+
#181'!'


# hash value = 164078382
unit1.message1=#208#159#208#190#208#187#209#143' "'#208#159#209'€'#208#190+
#208#178#208#176#208#185#208#180#208#181#209'€ (IP '#208#184#208#187#208#184+
' '#208#184#208#188#209#143')", "'#208#152#208#188#209#143' '#209#129#208+
#190#208#181#208#180#208#184#208#189#208#181#208#189#208#184#209#143'", "'+
#208#159#208#190#208#187#209#140#208#183#208#190#208#178#208#176#209#130#208+
#181#208#187#209#140'", "'#208#159#208#176#209'€'#208#190#208#187#209#140+
'" '#208#190#208#177#209#143#208#183#208#176#209#130#208#181#208#187#209#140+
#208#189#209#139' '#208#186' '#208#183#208#176#208#191#208#190#208#187#208+
#189#208#181#208#189#208#184#209#142'.'


# hash value = 249658814
unit1.message2=#208#162#208#176#208#186' '#208#186#208#176#208#186' '#208+
#146#209#139' '#208#190#209#130#208#186#208#176#208#183#208#176#208#187#208+
#184#209#129#209#140' '#208#190#209#130' '#208#186#208#190#208#189#209#130+
#209'€'#208#190#208#187#209#143' state '#209#129#208#181#209#130#208#181#208+
#178#208#190#208#179#208#190' '#208#186#208#176#208#177#208#181#208#187#209+
#143', '#209#130#208#190' '#208#178' '#209#134#208#181#208#187#209#143#209+
#133' '#209#129#208#189#208#184#208#182#208#181#208#189#208#184#209#143' '+
#208#189#208#176#208#179#209'€'#209#131#208#183#208#186#208#184' '#208#189+
#208#176' '#209#129#208#184#209#129#209#130#208#181#208#188#209#131' '#208+
#178#209'€'#208#181#208#188#209#143' '#208#180#208#190#208#183#208#178#208+
#190#208#189#208#176' '#209#131#209#129#209#130#208#176#208#189#208#190#208+
#178#208#187#208#181#208#189#208#190' '#208#178' 20 '#209#129#208#181#208+
#186'.'


# hash value = 180215022
unit1.message3=#208#162#208#176#208#186' '#208#186#208#176#208#186' '#208+
#146#209#139' '#208#189#208#181' '#208#178#209#139#208#177#209'€'#208#176+
#208#187#208#184' '#209'€'#208#181#208#186#208#190#208#189#208#189#208#181+
#208#186#209#130', '#209#130#208#190' '#208#178#209#139#208#177#208#190#209+
'€ '#208#178#209#129#209#130#209'€'#208#190#208#181#208#189#208#189#208#190+
#208#179#208#190' '#208#178' '#208#180#208#181#208#188#208#190#208#189' p'+
'ppd '#209'€'#208#181#208#186#208#190#208#189#208#189#208#181#208#186#209+
#130#208#176' '#208#191#209'€'#208#190#208#184#208#179#208#189#208#190#209+
'€'#208#184#209'€'#208#190#208#178#208#176#208#189'.'


# hash value = 241803774
unit1.message4=#208#162#208#176#208#186' '#208#186#208#176#208#186' '#209+
'€'#208#181#208#186#208#190#208#189#208#189#208#181#208#186#209#130' '#208+
#177#209#131#208#180#208#181#209#130' '#209'€'#208#181#208#176#208#187#208+
#184#208#183#208#190#208#178#208#176#208#189' '#208#178#209#129#209#130#209+
'€'#208#190#208#181#208#189#208#189#209#139#208#188' '#208#178' '#208#180+
#208#181#208#188#208#190#208#189' pppd '#208#188#208#181#209#130#208#190#208+
#180#208#190#208#188', '#209#130#208#190' '#208#178#209'€'#208#181#208#188+
#209#143' '#209'€'#208#181#208#186#208#190#208#189#208#189#208#181#208#186+
#209#130#208#176' ('#208#178#209'€'#208#181#208#188#209#143' '#208#190#209+
#130#208#191#209'€'#208#176#208#178#208#186#208#184' LCP '#209#141#209#133+
#208#190'-'#208#183#208#176#208#191#209'€'#208#190#209#129#208#190#208#178+
') '#209#131#209#129#209#130#208#176#208#189#208#190#208#178#208#187#208#181+
#208#189#208#190' '#208#178' 20 '#209#129#208#181#208#186'.'


# hash value = 111807966
unit1.message5=#208#162#208#176#208#186' '#208#186#208#176#208#186' '#209+
'€'#208#181#208#186#208#190#208#189#208#189#208#181#208#186#209#130' '#208+
#177#209#131#208#180#208#181#209#130' '#209'€'#208#181#208#176#208#187#208+
#184#208#183#208#190#208#178#208#176#208#189' '#208#178#209#129#209#130#209+
'€'#208#190#208#181#208#189#208#189#209#139#208#188' '#208#178' '#208#180+
#208#181#208#188#208#190#208#189' pppd '#208#188#208#181#209#130#208#190#208+
#180#208#190#208#188', '#209#130#208#190' '#208#178#209'€'#208#181#208#188+
#209#143' '#208#180#208#190#208#183#208#178#208#190#208#189#208#176' '#208+
#189#208#181' '#208#184#209#129#208#191#208#190#208#187#209#140#208#183#209+
#131#208#181#209#130#209#129#209#143' '#208#183#208#176' '#208#189#208#181+
#208#189#208#176#208#180#208#190#208#177#208#189#208#190#209#129#209#130#209+
#140#209#142'.'


# hash value = 126072094
unit1.message6=#208#162#208#176#208#186' '#208#186#208#176#208#186' '#208+
#178#209#139#208#177#209'€'#208#176#208#189#208#176'/'#208#184#208#183#208+
#188#208#181#208#189#208#181#208#189#208#176' '#208#190#208#191#209#134#208+
#184#209#143' '#208#191#208#190#208#187#209#131#209#135#208#181#208#189#208+
#184#209#143' '#208#188#208#176#209'€'#209#136#209'€'#209#131#209#130#208+
#190#208#178' '#209#135#208#181#209'€'#208#181#208#183' DHCP, '#209#130#208+
#190' '#209#129#208#181#209#130#209#140' '#208#177#209#131#208#180#208#181+
#209#130' '#208#191#208#181#209'€'#208#181#208#183#208#176#208#191#209#131+
#209#137#208#181#208#189#208#176'.'


# hash value = 267810235
unit1.message7=#208#160#208#176#208#177#208#190#209#135#208#184#208#185' '+
#209#129#209#130#208#190#208#187

# hash value = 100017806
unit1.message8=#208#146' '#208#191#208#190#208#187#208#181' "'#208#146#209+
'€'#208#181#208#188#209#143' '#208#180#208#190#208#183#208#178#208#190#208+
#189#208#176'" '#208#188#208#190#208#182#208#189#208#190' '#208#178#208#178+
#208#181#209#129#209#130#208#184' '#208#187#208#184#209#136#209#140' '#209+
#135#208#184#209#129#208#187#208#190' '#208#178' '#208#191#209'€'#208#181+
#208#180#208#181#208#187#208#176#209#133' '#208#190#209#130' 5 '#208#180#208+
#190' 255 '#209#129#208#181#208#186'.'


# hash value = 2856862
unit1.message9=#208#162#208#176#208#186' '#208#186#208#176#208#186' '#208+
#178#209#139#208#177#209'€'#208#176#208#189#208#176' '#208#190#208#191#209+
#134#208#184#209#143' '#208#180#208#190#208#177#208#176#208#178#208#187#208+
#181#208#189#208#184#209#143' '#208#184#208#189#209#130#208#181#209'€'#209+
#132#208#181#208#185#209#129#208#190#208#178' [ppp0..ppp9] '#208#178' '#208+
#184#209#129#208#186#208#187#209#142#209#135#208#181#208#189#208#184#209#143+
' '#209#132#208#176#208#185#208#181#209'€'#208#178#208#190#208#187#208#176+
', '#209#130#208#190' '#209#132#208#176#208#185#208#181#209'€'#208#178#208+
#190#208#187' '#208#177#209#131#208#180#208#181#209#130' '#208#191#208#181+
#209'€'#208#181#208#183#208#176#208#191#209#131#209#137#208#181#208#189'.'+


# hash value = 181353854
unit1.message10=#208#146' '#208#191#208#190#208#187#208#181' "'#208#146#209+
'€'#208#181#208#188#209#143' '#209'€'#208#181#208#186#208#190#208#189#208+
#189#208#181#208#186#209#130#208#176'" '#208#188#208#190#208#182#208#189#208+
#190' '#208#178#208#178#208#181#209#129#209#130#208#184' '#208#187#208#184+
#209#136#209#140' '#209#135#208#184#209#129#208#187#208#190' '#208#178' '#208+
#191#209'€'#208#181#208#180#208#181#208#187#208#176#209#133' '#208#190#209+
#130' 0 '#208#180#208#190' 255 '#209#129#208#181#208#186'.'


# hash value = 1427886
unit1.message11=#208#160#208#181#208#186#208#190#208#188#208#181#208#189#208+
#180#209#131#208#181#209#130#209#129#209#143' '#208#190#209#130#208#186#208+
#187#209#142#209#135#208#184#209#130#209#140' '#208#191#208#190#208#180#208+
#189#209#143#209#130#208#190#208#181' VPN PPTP - '#209#130#208#190#208#179+
#208#180#208#176' '#209#136#208#187#209#142#208#183' '#208#187#208#190#208+
#186#208#176#208#187#209#140#208#189#208#190#208#185' '#209#129#208#181#209+
#130#208#184' '#208#190#208#191#209'€'#208#181#208#180#208#181#208#187#208+
#184#209#130#209#129#209#143' '#208#176#208#178#209#130#208#190#208#188#208+
#176#209#130#208#184#209#135#208#181#209#129#208#186#208#184'.'


# hash value = 266069678
unit1.message12=#208#161#208#181#209#130#208#181#208#178#208#190#208#185' '+
#208#184#208#189#209#130#208#181#209'€'#209#132#208#181#208#185#209#129' '+
#208#189#208#181' '#208#190#208#191#209'€'#208#181#208#180#208#181#208#187+
#208#184#208#187#209#129#209#143'.'


# hash value = 31333374
unit1.message13=#208#161#208#181#209#130#208#181#208#178#208#190#208#185' '+
#208#186#208#176#208#177#208#181#208#187#209#140' '#208#180#208#187#209#143+
' '#208#176#208#178#209#130#208#190#208#188#208#176#209#130#208#184#209#135+
#208#181#209#129#208#186#208#190#208#179#208#190' '#208#190#208#191#209'€'+
#208#181#208#180#208#181#208#187#208#181#208#189#208#184#209#143' '#209#136+
#208#187#209#142#208#183#208#176' '#208#187#208#190#208#186#208#176#208#187+
#209#140#208#189#208#190#208#185' '#209#129#208#181#209#130#208#184' '#208+
#189#208#181' '#208#191#208#190#208#180#208#186#208#187#209#142#209#135#208+
#181#208#189'.'


# hash value = 98238350
unit1.message14=#208#157#208#181' '#209#131#208#180#208#176#208#187#208#190+
#209#129#209#140' '#208#176#208#178#209#130#208#190#208#188#208#176#209#130+
#208#184#209#135#208#181#209#129#208#186#208#184' '#208#190#208#191#209'€'+
#208#181#208#180#208#181#208#187#208#184#209#130#209#140' '#209#136#208#187+
#209#142#208#183' '#208#187#208#190#208#186#208#176#208#187#209#140#208#189+
#208#190#208#185' '#209#129#208#181#209#130#208#184'.'


# hash value = 173160046
unit1.message15=#208#159#208#190#208#187#208#181' "'#208#161#208#181#209#130+
#208#181#208#178#208#190#208#185' '#208#184#208#189#209#130#208#181#209'€'+
#209#132#208#181#208#185#209#129'" '#208#183#208#176#208#191#208#190#208#187+
#208#189#208#181#208#189#208#190' '#208#189#208#181#208#178#208#181#209'€'+
#208#189#208#190'. '#208#159#209'€'#208#176#208#178#208#184#208#187#209#140+
#208#189#208#190' '#208#190#209#130' eth0 '#208#180#208#190' eth9.'


# hash value = 123673758
unit1.message16=#208#159#208#190#208#187#208#181' "'#208#168#208#187#209#142+
#208#183' '#208#187#208#190#208#186#208#176#208#187#209#140#208#189#208#190+
#208#185' '#209#129#208#181#209#130#208#184'" '#208#183#208#176#208#191#208+
#190#208#187#208#189#208#181#208#189#208#190' '#208#189#208#181#208#178#208+
#181#209'€'#208#189#208#190'. '#208#159#209'€'#208#176#208#178#208#184#208+
#187#209#140#208#189#208#190': xxx.xxx.xxx.xxx, '#208#179#208#180#208#181+
' xxx - '#209#135#208#184#209#129#208#187#208#190' '#208#190#209#130' 0 '#208+
#180#208#190' 255.'


# hash value = 159093678
unit1.message17=#208#159#208#190#208#187#208#181' "MTU" '#208#183#208#176+
#208#191#208#190#208#187#208#189#208#181#208#189#208#190' '#208#189#208#181+
#208#178#208#181#209'€'#208#189#208#190'. '#208#160#208#176#208#183#209'€'+
#208#181#209#136#208#181#208#189' '#208#187#208#184#209#136#209#140' '#208+
#180#208#184#208#176#208#191#208#176#208#183#208#190#208#189' [576..1460.'+
'.1492..1500]. '#208#160#208#181#208#186#208#190#208#188#208#181#208#189#208+
#180#209#131#208#181#209#130#209#129#209#143' MTU=1460.'


# hash value = 117355182
unit1.message18=#208#151#208#176#208#191#209#131#209#129#208#186' '#209#141+
#209#130#208#190#208#185' '#208#191#209'€'#208#190#208#179#209'€'#208#176+
#208#188#208#188#209#139' '#208#178#208#190#208#183#208#188#208#190#208#182+
#208#181#208#189' '#209#130#208#190#208#187#209#140#208#186#208#190' '#208+
#191#208#190#208#180' '#208#176#208#180#208#188#208#184#208#189#208#184#209+
#129#209#130#209'€'#208#176#209#130#208#190#209'€'#208#190#208#188'. '#208+
#157#208#176#208#182#208#188#208#184#209#130#208#181' <OK> '#208#180#208#187+
#209#143' '#208#190#209#130#208#186#208#176#208#183#208#176' '#208#190#209+
#130' '#208#183#208#176#208#191#209#131#209#129#208#186#208#176'.'


# hash value = 125288814
unit1.message19=#208#148#209'€'#209#131#208#179#208#176#209#143' '#209#130+
#208#176#208#186#208#176#209#143' '#208#182#208#181' '#208#191#209'€'#208+
#190#208#179#209'€'#208#176#208#188#208#188#208#176' '#209#131#208#182#208+
#181' '#208#191#209#139#209#130#208#176#208#181#209#130#209#129#209#143' '+
#209#129#208#186#208#190#208#189#209#132#208#184#208#179#209#131#209'€'#208+
#184#209'€'#208#190#208#178#208#176#209#130#209#140' VPN PPTP. '#208#157#208+
#176#208#182#208#188#208#184#209#130#208#181' <OK> '#208#180#208#187#209#143+
' '#208#190#209#130#208#186#208#176#208#183#208#176' '#208#190#209#130' '#208+
#180#208#178#208#190#208#185#208#189#208#190#208#179#208#190' '#208#183#208+
#176#208#191#209#131#209#129#208#186#208#176'.'


# hash value = 218930222
unit1.message20=#208#157#208#181#208#178#208#190#208#183#208#188#208#190#208+
#182#208#189#208#190' '#208#189#208#176#209#129#209#130#209'€'#208#190#208+
#184#209#130#209#140' VPN PPTP '#208#178' '#209#129#208#178#209#143#208#183+
#208#184' '#209#129' '#208#190#209#130#209#129#209#131#209#130#209#129#209+
#130#208#178#208#184#208#181#208#188' '#208#191#208#176#208#186#208#181#209+
#130#208#176' pptp-linux '#208#184' '#208#189#208#181#208#178#208#190#208+
#183#208#188#208#190#208#182#208#189#208#190#209#129#209#130#209#140#209#142+
' '#208#181#208#179#208#190' '#208#176#208#178#209#130#208#190#208#188#208+
#176#209#130#208#184#209#135#208#181#209#129#208#186#208#190#208#185' '#209+
#131#209#129#209#130#208#176#208#189#208#190#208#178#208#186#208#184'.'


# hash value = 35968092
unit1.message21=#208#163#209#129#209#130#208#176#208#189#208#190#208#178#208+
#186#208#176' '#208#189#208#181' '#209#131#208#180#208#176#208#187#208#176+
#209#129#209#140

# hash value = 103945310
unit1.message22=#208#157#208#181#208#178#208#190#208#183#208#188#208#190#208+
#182#208#189#208#190' '#209#129#208#190#208#183#208#180#208#176#209#130#209+
#140' '#209#143#209'€'#208#187#209#139#208#186' '#208#189#208#176' '#209'€'+
#208#176#208#177#208#190#209#135#208#181#208#188' '#209#129#209#130#208#190+
#208#187#208#181', '#209#130#208#176#208#186' '#208#186#208#176#208#186' '+
#208#184#209#129#208#191#208#190#208#187#209#140#208#183#209#131#208#181#209+
#130#209#129#209#143' '#208#189#208#181#209#129#209#130#208#176#208#189#208+
#180#208#176#209'€'#209#130#208#189#209#139#208#185' '#208#184#208#180#208+
#181#208#189#209#130#208#184#209#132#208#184#208#186#208#176#209#130#208#190+
#209'€ '#208#191#208#190#208#187#209#140#208#183#208#190#208#178#208#176#209+
#130#208#181#208#187#209#143' '#208#184'/'#208#184#208#187#208#184' '#208+
#187#208#190#208#186#208#176#208#187#208#184#208#183#208#176#209#134#208#184+
#209#143'.'


# hash value = 123381838
unit1.message23=#208#157#208#181#208#178#208#190#208#183#208#188#208#190#208+
#182#208#189#208#190' '#209#129#208#190#208#183#208#180#208#176#209#130#209+
#140' '#209#143#209'€'#208#187#209#139#208#186' '#208#189#208#176' '#209'€'+
#208#176#208#177#208#190#209#135#208#181#208#188' '#209#129#209#130#208#190+
#208#187#208#181', '#209#130#208#176#208#186' '#208#186#208#176#208#186' '+
#208#190#209#130#209#129#209#131#209#130#209#129#209#130#208#178#209#131#208+
#181#209#130' '#209#132#208#176#208#185#208#187' /usr/share/applications/'+
'ponoff.desktop.'


# hash value = 6566798
unit1.message24=#208#164#208#176#208#185#208#181#209'€'#208#178#208#190#208+
#187' '#209#131#208#182#208#181' '#208#189#208#176#209#129#209#130#209'€'#208+
#190#208#181#208#189'.'

